--- a/src/css/vars.scss
+++ b/src/css/vars.scss
@@ -231,15 +231,28 @@ $breakpoint-2xl-height: 1350px;
   * A mixin to apply styles based on the current theme.
   *
   * @param {string} 'light' | 'dark' - The theme to apply the styles for.
+  * @param {boolean} - Apply only the complex exclusive :not selector without the generic data-theme one.
   */
-@mixin data-theme-selector($theme) {
-  @if $theme == 'light' {
-    [data-theme="light"] &, [data-theme="light"]:not(:has([data-theme="dark"])) & {
-      @content
+@mixin data-theme-selector($theme, $exclusive: false) {
+  @if $exclusive == true {
+    @if $theme == 'light' {
+      [data-theme="light"]:not(:has([data-theme="dark"])) & {
+        @content
+      }
+    } @else if $theme == 'dark' {
+      [data-theme="dark"]:not(:has([data-theme="light"])) & {
+        @content
+      }
     }
-  } @else if $theme == 'dark' {
-    [data-theme="dark"] &, [data-theme="dark"]:not(:has([data-theme="light"])) & {
-      @content
+  } @else {
+    @if $theme == 'light' {
+      [data-theme="light"] &, [data-theme="light"]:not(:has([data-theme="dark"])) & {
+        @content
+      }
+    } @else if $theme == 'dark' {
+      [data-theme="dark"] &, [data-theme="dark"]:not(:has([data-theme="light"])) & {
+        @content
+      }
     }
   }
 }
